fix: [main] Z-index for modal

--- a/src/components/molecules/Modal/Modal.scss
+++ b/src/components/molecules/Modal/Modal.scss
@@ -15,7 +15,7 @@
 
   height: 100vh;
 
-  z-index: 101;
+  z-index: 1000;
 }
 
 .rf-modal--darken {
